# tinyexplain

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: image_classification.md  semantic_segmentation.md  usage.md
examples/data/pascal_voc/: README.md
examples/data/titanic/: README.md
examples/explainability/image_classification/: deconvnet.py  gradcam.py  gradientinput.py  integrated_gradients.py  kernel_shap.py  lime.py  occlusion.py  rise.py  saliency.py
examples/explainability/object_detection/: deconvnet.py  gradcam.py  gradientinput.py  guided_backpropagation.py  integrated_gradients.py  kernel_shap.py  lime.py  occlusion.py  rise.py  saliency.py
examples/explainability/semantic_segmentation/: deconvnet.py  gradcam.py  gradientinput.py  guided_backpropagation.py  integrated_gradients.py  kernel_shap.py  lime.py  occlusion.py  rise.py  saliency.py
scripts/: count_loc.py
tests/integration/: test_deconvnet.py  test_gradcam.py  test_gradient_input.py  test_guided_backpropagation.py  test_integrated_gradients.py  test_kernel_shap.py  test_lime.py  test_occlusion.py  test_rise.py  test_saliency.py
tests/unit/: test_backward_override.py  test_other.py  test_relu_override.py  test_score_functions.py
tinyexplain/: __init__.py  logging.py  score_functions.py  task_functions.py  types.py
tinyexplain/explain/: __init__.py  deconvnet.py  explainer.py  gradcam.py  gradient_input.py  guided_backpropagation.py  integrated_gradients.py  kernel_shap.py  lime.py  occlusion.py  rise.py  saliency.py
tinyexplain/utils/: __init__.py  logging.py  overrides.py
(+32 files in other folders)
