[project]
name = "tinyexplain"
description = "Explainable AI Toolkit for tinygrad"
requires-python = ">=3.10"
authors = [{name = "davej23", email = "email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "numpy>=1.26",
    "tinygrad @ git+https://github.com/tinygrad/tinygrad.git",
    "matplotlib>=3.8",
    "opencv-python>=4.9",
    "scikit-learn>=1.4",
    "scikit-image>=0.22",
    "requests>=2.31"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "black>=24.3",
    "pylint>=3.1",
    "mypy>=1.9"
]
examples = [
    "pyunpack>=0.3",
    "patool>=2.0"
]

[tool.black]
line-length = 140

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=tinyexplain"

[tool.setuptools.dynamic]
version = {attr = "tinyexplain.__version__"}

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
